# CoolTiger

./: .env  .firebaserc  .gitignore  AI_CALL_PIPELINE_TODO.md  cooltiger_task_plan.md  firebase.json  firestore.rules  project.md  storage.rules
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
apps/flutter_app/: pubspec.yaml
backend/: .gitignore  Dockerfile  apphosting.yaml  config.py  main.py  pyproject.toml  requirements.txt  test_deployment.py  test_input.m4a
backend/app/: main.py
backend/app/routers/: __init__.py  analysis.py  conversation.py  health.py  scheduler.py
backend/app/schemas/: __init__.py  analysis.py  conversation.py  guardian.py  senior.py  training.py
backend/app/services/: __init__.py  clova_speech.py  clova_studio.py  fcm_client.py  firestore_client.py  google_tts.py
backend/db/: __init__.py  firestore_client.py
backend/functions/: requirements.txt
backend/models/: __init__.py  common.py  conversation.py  quiz.py
backend/routers/: __init__.py  conversation.py  health.py  quiz.py
backend/services/: __init__.py  clova_speech.py  clova_studio.py  google_tts.py
cooltiger_app/: .gitignore  README.md  firebase.json  pubspec.yaml
cooltiger_app/lib/: app.dart  firebase_options.dart  main.dart  main_guardian.dart  main_senior.dart  main_senior_web.dart
cooltiger_app/test/: widget_test.dart
cooltiger_app/web/: index.html  manifest.json
frontend/: DEMO_TEST_GUIDE.md  REPORTS_README.md  ROUTING_DEMO_MODE.md  firebase.json  pubspec.yaml
frontend/lib/: app_config.dart  main.dart  (+1 more)
tmp_home/: .flutter
(+74 files in other folders)
